user auth fixes

--- a/test/private/users.yml
+++ b/test/private/users.yml
@@ -1,2 +1,2 @@
 ---
-admin: "$2a$12$5BNIcmrRvybu66VI82rALOhn3IRufy0Qx2nxgzBWzzbrAJUFdyjPi"
+admin: "$2a$12$BbjU7L6jrYc.kbBblGGwJe1Dhcm5YgLteE6Zc2FbuZoK34wUrn2jy"
