--- a/private/users.yml
+++ b/private/users.yml
@@ -1,2 +1,3 @@
 ---
 admin: "$2a$12$2QEKsx7IAwyfCjtgjsosb.7SU/XM8nwHE5L6zrqEvt6nHteNB3tzC"
+daniel: "$2a$12$aXG/MejXjv3Migd4qR4TJuCGqrwL/CfFCbC/K8hGVV1A.Hh7q.EpG"
