added tests for user signup

--- a/test/private/users.yml
+++ b/test/private/users.yml
@@ -1,2 +1,2 @@
 ---
-admin: "$2a$12$BbjU7L6jrYc.kbBblGGwJe1Dhcm5YgLteE6Zc2FbuZoK34wUrn2jy"
+admin: "$2a$12$oEQDY8XqrZZzt79dDrMNn.K7C.Q8TYC6NkSjhbdAOr7KaKNP04Ijq"
