Security changes to prevent source code access

--- a/data/.1_txt.yml
+++ b/data/.1_txt.yml
@@ -3,3 +3,4 @@
 
   '
 20231018-22:09:21: "a test file for uploading\r\nsome edit"
+20231019-19:18:30: "a test file for uploading\r\nsome edit\r\nanother edit"
