--- a/test/private/users.yml
+++ b/test/private/users.yml
@@ -1,2 +1,2 @@
 ---
-admin: "$2a$12$oEQDY8XqrZZzt79dDrMNn.K7C.Q8TYC6NkSjhbdAOr7KaKNP04Ijq"
+admin: "$2a$12$xFduXLTOVidsABIr2fwlz.nGLw/2OAd810jM1ZyC58cGHI99ZBXze"
