--- a/data/.about_md.yml
+++ b/data/.about_md.yml
@@ -5,3 +5,10 @@
   one is italicised*\r\n- **This one is bold**\r\n\r\n[Here is a link to the wiki
   page for Ruby](https://en.wikipedia.org/wiki/Ruby_(programming_language))\r\n\r\nHere
   is an `inline code snippet`.\r\n\r\nHere is an embedded image:\r\n\r\n![bowl](/bowl.jpg)"
+20231019-19:20:33: "## Ruby is...\r\n\r\nA dynamic, open source programming language
+  witha focus on simplicity and productivity. It has an elegant syntax that is natural
+  and easy to write.\r\n\r\n#### A level 4 heading \r\n- Some bullet points\r\n- *This
+  one is italicised*\r\n- **This one is bold**\r\n\r\n[Here is a link to the wiki
+  page for Ruby](https://en.wikipedia.org/wiki/Ruby_(programming_language))\r\n\r\nHere
+  is an `inline code snippet`.\r\n\r\nHere is an embedded image:\r\n\r\n![bowl](/bowl.jpg)\r\n\r\nHere
+  is an embedded gif:\r\n\r\n![rotating cat](/cat.gif)"
