format + added content-type assertions to cms_test

--- a/test/private/users.yml
+++ b/test/private/users.yml
@@ -1,2 +1,2 @@
 ---
-admin: "$2a$12$xFduXLTOVidsABIr2fwlz.nGLw/2OAd810jM1ZyC58cGHI99ZBXze"
+admin: "$2a$12$fObzcbgGk0abuBbwc/L2l.O/ZZUqlJ/LEXyhP.DnxgwNbv3u.OYWK"
